Fixed Sonar issue (deprecated method).